data/derived/comb/progs/unify/prog7382.ml.out
Characters 97-105:
  else ((sumList(digitsOfInt (loop x))) + y) in
                             ^^^^^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
